Fix unsupported notice not supporting dark mode

--- a/src/components/SearchForm/styles.module.scss
+++ b/src/components/SearchForm/styles.module.scss
@@ -101,6 +101,10 @@
 
       > .arrow {
         border-bottom: none;
+
+        &::before {
+          border-width: 0;
+        }
       }
     }
   }
