--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -56,3 +56,6 @@ $pagination-color: var(--pagination-color);
 $pagination-hover-color: var(--pagination-color);
 $pagination-hover-bg: var(--pagination-hover);
 $pagination-active-bg: var(--pagination-active);
+
+// Popover
+$popover-bg: var(--containers-background);
